# Aegisub

./: README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
po/: zh_CN.po
src/: context.cpp  dialog_about.cpp  frame_main.cpp  frame_main.h  grid_column.cpp  hotkey.cpp  llm_provider.cpp  llm_provider.h  main.cpp  menu.cpp  meson.build  preferences.cpp  stt_provider.h  stt_service.cpp  stt_service.h  subs_edit_box.cpp  subs_edit_box.h  whisper_service.cpp  whisper_service.h
src/command/: automation.cpp
src/include/aegisub/: context.h
src/libresrc/: default_config.json  default_hotkey.json
src/mcp/: mcp_server.cpp  mcp_server.h  mcp_tools.cpp
subprojects/: cpp-httplib.wrap
subprojects/packagefiles/cpp-httplib/: meson.build
tools/: osx-bundle.sh  version.ps1
